#48 API: Фильм. Характеристики, рейтинг, описание
* Правки запуска Бэка

* Подключение генерации типов из сваггера

* Подключение тестового эндпоинта

* Подключение списка пользователей к странице пользователей

* Рефакторинг страниц пользователей

* Добавлено удаление пользователя

* Добавлено получение пользователя по ID

* Добавлена таблица Фильма

* Добавлен контроллер фильмов

* Добавлены теги

* Правка ридми

* Правка пайплайна

* Правка пайплайна

* Фикс форматтера

---------
