# packages/backend/src/controllers/Films/Films.DTO.ts
@@ -1,0 +1,18 @@
+/**
+ * Стандартная DTO фильма
+ * @tsoaModel
+ */
+export interface FilmsDTO {
+  /**
+   * @isInt
+   */
+  id: number;
+
+  name: string;
+}
+
+/**
+ * Данные для создания или редактирования фильма
+ * @tsoaModel
+ */
+export interface UserCreationParams extends Pick<FilmsDTO, 'name'> {}
