# packages/backend/swagger.json
@@ -110,6 +110,24 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"FilmsDTO": {
+				"description": "Стандартная DTO фильма",
+				"properties": {
+					"id": {
+						"type": "integer",
+						"format": "int32"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -139,6 +157,9 @@
 					}
 				},
 				"summary": "Получение списка пользователей",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": []
 			},
@@ -170,6 +191,9 @@
 					}
 				},
 				"summary": "Создание нового пользователя",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -215,6 +239,9 @@
 					}
 				},
 				"summary": "Получение указанного пользователя",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -270,6 +297,9 @@
 					}
 				},
 				"summary": "Изменение пользователя",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -317,12 +347,87 @@
 					}
 				},
 				"summary": "Удаление пользователя",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": [
 					{
 						"description": "Идентификатор существующего пользователя, которого нужно удалить",
 						"in": "path",
 						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/films": {
+			"get": {
+				"operationId": "ListFilms",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/FilmsDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"summary": "Получение списка фильмов",
+				"tags": [
+					"Film"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/films/{filmId}": {
+			"get": {
+				"operationId": "GetFilm",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/FilmsDTO"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Not found",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/NotFoundErrorJSON"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					}
+				},
+				"summary": "Получение указанного фильма",
+				"tags": [
+					"Film"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "filmId",
 						"required": true,
 						"schema": {
 							"format": "double",
